--- a/Web/ClientsTracker.Web.Infrastructure/ClientsTracker.Web.Infrastructure.csproj
+++ b/Web/ClientsTracker.Web.Infrastructure/ClientsTracker.Web.Infrastructure.csproj
@@ -66,9 +66,8 @@
     <Compile Include="Clients\ClientVM.cs" />
     <Compile Include="Mapping\AutoMapperConfig.cs" />
     <Compile Include="Mapping\IHaveCustomMappings.cs" />
-    <Compile Include="Mapping\IMapFrom{T}.cs" />
-    <Compile Include="Mapping\IMapTo{T}.cs" />
-    <Compile Include="Mapping\QueryableExtensions.cs" />
+    <Compile Include="Mapping\IMapFrom.cs" />
+    <Compile Include="Mapping\IMapTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users\UsersVM.cs" />
   </ItemGroup>
