--- a/Web/ClientsTracker.Web/compilerconfig.json
+++ b/Web/ClientsTracker.Web/compilerconfig.json
@@ -2,5 +2,9 @@
   {
     "outputFile": "Content/site.css",
     "inputFile": "Content/site.less"
+  },
+  {
+    "outputFile": "Content/kendo.css",
+    "inputFile": "Content/kendo.less"
   }
 ]
